--- a/workshop/3-Books-optional/index.html
+++ b/workshop/3-Books-optional/index.html
@@ -7,30 +7,34 @@
     <div class="left-part">
       <div class="current-status">
         <div class="current-book">
-          <h2>Current book</h2>
-          <p id="currentBook">No book</p>
+          <div class="current-book-text">
+            <h2 id="currentBook">Current book</h2>
+          </div>
           <div class="buttons">
             <button id="bookStart">Book start</button>
-            <button id="bookOver">Book over</button>
           </div>
         </div>
 
         <div class="last-book">
-          <h2>Last book</h2>
-          <p id="lastBook">No book</p>
+          <h2 id="lastBook">Last book</h2>
+          <div class="buttons">
+          <button id="bookOver">Book over</button>
+          </div>
         </div>
       </div>
 
       <div class="form">
         <h2>Enter a book</h2>
-          <input id="bookTitle" type="text" placeholder="Book title" required>
-          <input id="bookAuthor" type="text" placeholder="Book author" required>
-          <input id="bookGenre" type="text" placeholder="Book genre">
-          <label>
-            <input id="readStatus" type="checkbox">
-            Read
-          </label>
-          <button id="submitButton">New Book</button>
+          <div class="inputs">
+            <input id="bookTitle" type="text" placeholder="Book title" required>
+            <input id="bookAuthor" type="text" placeholder="Book author" required>
+            <input id="bookGenre" type="text" placeholder="Book genre">
+            <label class="readStatus">
+              <input id="readStatus" type="checkbox">
+              Read
+            </label>
+            <button id="submitButton">New Book</button>
+          </div>
       </div>
     </div>
 
