added genre column in library

--- a/workshop/3-Books-optional/index.html
+++ b/workshop/3-Books-optional/index.html
@@ -47,6 +47,9 @@
         <div class="libraryAuthor">
           <h3>Author</h3>
         </div>
+        <div class="libraryGenre">
+          <h3>Genre</h3>
+        </div>
         <div class="libraryRead">
           <h3>Status</h3>
         </div>
