bordershadow and better spacing in the css

--- a/workshop/3-Books-optional/index.html
+++ b/workshop/3-Books-optional/index.html
@@ -19,8 +19,8 @@
     <section class="read-activity title">
       Reading Activity
       <div class="read-lastread">
-        <div class="currently-reading">Currently Reading</div>
-        <div class="last-read">Last Read</div>
+        <div class="currently-reading subtitle">Currently Reading</div>
+        <div class="last-read subtitle">Last Read</div>
       </div>
     </section>
     <section class="bookShelf title" id="_bookshelf">
@@ -54,8 +54,8 @@
         </section>
         <section class="errorSection"></section>
         <section class="btn-section">
-          <button class="clear button" type="button">Clear</button>
-          <button class="submit button" id="submitBtn" type="submit">
+          <button class="clear btn" type="button">Clear</button>
+          <button class="submit btn" id="submitBtn" type="submit">
             Submit
           </button>
         </section>
